--- a/static/sheet3.scss
+++ b/static/sheet3.scss
@@ -1,3 +1,8 @@
+body {
+    font-family: 'メイリオ' , 'Hiragino Kaku Gothic Pro', sans-serif
+    }
+
+
 .site {
     h1 {
         margin:0;
@@ -30,7 +35,7 @@
 
     }
 }
-
+/*　横並びのメニュー */
 .menu {
     ul {
         margin: 0;
@@ -58,5 +63,38 @@
             }
 
         }
+    }
+}
+
+/*　縦並びのメニュー */
+/*
+.menu {
+    ul {
+        margin: 0;
+        padding: 0;
+        list-style: none;
+
+        }
+    li {
+        a {
+            display: block;
+            padding: 5px;
+            color: #000000;
+            font-size: 14px;
+            text-decoration: none;
+
+            &:hover {
+                background-color: #eeeeee;
+            }
+        }
+    }
+}
+*/
+
+.copyright {
+    p{
+        margin: 0;
+        color: #666666;
+        font-size: 14px;
     }
 }
