--- a/static/sheet4.scss
+++ b/static/sheet4.scss
@@ -1,4 +1,4 @@
-$color: red, green, blue, yellow;
+$color: red, green, blue, yellow, violet;
 
 @mixin defalt_box($color,$H: 200px, $W: 100% ) {
     height: $H;
@@ -7,15 +7,298 @@ $color: red, green, blue, yellow;
 }
 
 
-@for $i from 1 through 4 {
-    .box#{$i} {
-        @include defalt_box(nth($color,$i));
-        @if ($i==3 or $i==4) {
-            float: left;
+body {
+    font-family: 'メイリオ' , 'Hiragino Kaku Gothic Pro', sans-serif
+    }
+
+.site {
+    h1 {
+        margin:0;
+        font-size: 30px;
+        a {
+            color: #000000;
+            text-decoration: none;
+        }
+    }
+
+}
+
+/*　横並びのメニュー */
+.menu {
+    ul {
+        margin: 0;
+        padding: 0;
+        list-style: none;
+        &:after {
+            content:"";
+            display: block;
+            clear: both;
+        }
+        }
+    li {
+        float: left;
+        width: auto;
+
+        a {
+            display: block;
+            padding: 15px;
+            color: #000000;
+            font-size: 14px;
+            text-decoration: none;
+
+            &:hover {
+                background-color: #75dbe7;
+            }
+
         }
     }
 }
 
-.box2 {
-    float: left;
+.kiji {
+    h1 {
+        margin-top: 0;
+        margin: {
+            bottom: 20px;
+        } 
+        font-size: 36px;
+    }
+    p {
+        margin: {
+            top: 0;
+            bottom: 20px;
+        }
+
+
+    }
+    img {
+        max-width: 100%;
+        height: auto;
+    }
+}
+.sidemenu {
+    margin-bottom: 30px;
+
+    h1 {
+        margin: {
+            top: 0;
+            bottom: 10px;
+        }
+        border-bottom: dotted 2px #dddddd;
+        color: #666666;
+        font-size: 18px;
+    }
+    ul {
+        margin: 0;
+        padding: 0;
+        list-style: none;
+    }
+    li {
+        a {
+            display: block;
+            padding: 5px;
+            color: #000000;
+            font-size: 14px;
+            text-decoration: none;
+        }
+        &:hover {
+            background-color: #eeeeee;
+        }
+    }
+}
+
+.osusume {
+    margin-bottom: 30px;
+    h1 {
+        margin: {
+            top: 0;
+            bottom: 10px;
+        }
+        border-bottom: dotted 2px #dddddd;
+        color: #666666;
+        font-size: 18px;
+    }
+    ul {
+        margin: 0;
+        padding: 0;
+        list-style: none;
+    }
+    li {
+        a {
+            display: block;
+            padding: 5px;
+            color: #000000;
+            font-size: 14px;
+            text-decoration: none;
+        }
+        &:hover {
+            background-color: #eeeeee;
+        }
+    }
+}
+
+.ninki {
+    h1 {
+        margin: {
+            top: 0;
+            bottom: 10px;
+        }
+        border-bottom: dotted 2px #dddddd;
+        color: #666666;
+        font-size: 18px;
+    }
+    ul {
+        margin: 0;
+        padding: 0;
+        list-style: none;
+    }
+    li {
+        a {
+            display: block;
+            padding: 5px;
+            color: #000000;
+            font-size: 14px;
+            text-decoration: none;
+        }
+        &:hover {
+            background-color: #eeeeee;
+        }
+    }
+}
+
+.copyright {
+    p {
+        margin: 0;
+        color: #666666;
+        font-size: 14px;
+    }
+}
+
+@for $i from 1 through 5 {
+    .box#{$i} {
+        @if $i==1 {
+            @include defalt_box(none, none);
+            padding-top: 8px;
+            padding-bottom: 8px;
+        }
+        @if $i==2 {
+            @include defalt_box(#7cbac1, none);
+        }
+        @if $i==3 {
+            @include defalt_box(none, none);
+            padding-top: 40px;
+            padding-bottom: 30px;
+        }
+        @if $i==4 {
+            @include defalt_box(none, none);
+            padding-top: 40px;
+            padding-bottom: 30px;
+        }
+        @if $i==5 {
+            @include defalt_box(none, none);
+            border-top: solid 1px #dddddd;
+            padding-top: 15px;
+            padding-bottom: 15px;
+        }
+    }
+    
+}
+/* ######## 599px以下 ######## */
+@media (max-width: 599px){
+    /* ナビゲーション */
+    .menu {
+        li {
+            a {
+                padding: 10px 3px;
+                font-size: 11px;
+            }
+        }
+    }
+    /* サイト名と記事タイトル */
+    .site {
+        h1 { 
+            font-size: 20px;
+        }
+    }
+    .kiji {
+        h1 { 
+            font-size: 26px;
+        }
+    }
+    /* ボックスの上下の間隔 */
+    .box1 {
+        padding-top: 4px;
+        padding-bottom: 4px;
+    }
+    .box3 {
+        padding-top: 25px;
+    }
+
+}
+
+
+
+/* ######## 600px以上〜797px以下 ######## */
+@media (min-width: 600px) and (max-width: 797px){
+    .box4 {
+        &:after {
+            content: "";
+            display: block;
+            clear: both;
+        }
+    }
+    .box4-1 {
+        float: left;
+        width: 50%;
+        padding-right: 20px;
+        -moz-box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+        box-sizing: border-box;
+    }
+    .box4-2 {
+        float: left;
+        width: 50%;
+        padding-left: 20px;
+        -moz-box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+        box-sizing: border-box;
+    }
+
+}
+
+@media (min-width: 768px){
+
+    .boxA:after {
+        content: "";
+        display: block;
+        clear: both;
+    }
+
+    @for $i from 1 through 5 {
+        .box#{$i} {
+            
+            @if ($i==3) {
+                @include defalt_box(none,none, 70%);
+                float: left;
+                padding-right: 50px;
+                -moz-box-sizing: border-box;
+                -webkit-box-sizing: border-box;
+                box-sizing: border-box;
+
+            }@else if ($i==4) {
+                @include defalt_box(none,none, 30%);
+                float: left;
+            }
+    
+            }
+        }   
+
+}
+
+/* ######## 1040px以上 ######## */
+@media (min-width: 1040px){
+    .box1, .box2, .boxA, .box5 {
+        width: 1000px;
+        margin-left: auto;
+        margin-right: auto;
+    } 
 }
