--- a/static/sheet4.css
+++ b/static/sheet4.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+/* test */
 body {
   font-family: 'メイリオ' , 'Hiragino Kaku Gothic Pro', sans-serif;
 }
@@ -6,10 +7,12 @@ body {
 .site h1 {
   margin: 0;
   font-size: 30px;
+  font-family: 'Paytone One', sans-serif;
+  font-weight: normal;
 }
 
 .site h1 a {
-  color: #000000;
+  color: #83a4a8;
   text-decoration: none;
 }
 
@@ -43,15 +46,73 @@ body {
   background-color: #75dbe7;
 }
 
+.kiji {
+  /*記事投稿日*/
+}
+
+.kiji .kijicat {
+  margin-bottom: 25px;
+}
+
+.kiji .kijicat ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.kiji .kijicat ul:after {
+  content: "";
+  display: block;
+  clear: both;
+}
+
+.kiji .kijicat li {
+  float: left;
+  width: auto;
+}
+
+.kiji .kijicat li a {
+  display: block;
+  margin-right: 5px;
+  padding: 3px;
+  border-radius: 2px;
+  color: #ffffff;
+  background-color: #75dbe7;
+  font-size: 12px;
+  text-decoration: none;
+}
+
+.kiji .kijicat li a:hover {
+  background-color: #94ecf6;
+}
+
 .kiji h1 {
   margin-top: 0;
   margin-bottom: 20px;
   font-size: 36px;
 }
 
+.kiji h2 {
+  margin-top: 40px;
+  padding-left: 10px;
+  border-left: solid 10px #7cdac1;
+  font-weight: normal;
+}
+
 .kiji p {
   margin-top: 0;
   margin-bottom: 20px;
+}
+
+.kiji .kijiinfo {
+  margin-bottom: 20px;
+  margin-top: -10px;
+}
+
+.kiji .kijiinfo i {
+  margin-right: 5px;
+  color: #aaaaaa;
+  font-size: 20px;
 }
 
 .kiji img {
@@ -69,6 +130,11 @@ body {
   border-bottom: dotted 2px #dddddd;
   color: #666666;
   font-size: 18px;
+}
+
+.sidemenu i {
+  color: #888888;
+  margin-right: 5px;
 }
 
 .sidemenu ul {
