--- a/static/sheet4.css
+++ b/static/sheet4.css
@@ -120,6 +120,52 @@ body {
   height: auto;
 }
 
+.share {
+  margin-top: 40px;
+}
+
+.share ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.share ul:after {
+  content: "";
+  display: block;
+  clear: both;
+}
+
+.share li {
+  float: left;
+  width: 33.33%;
+}
+
+.share li a {
+  display: block;
+  padding: 10px 5px;
+  color: #ffffff;
+  font-size: 14px;
+  text-align: center;
+  text-decoration: none;
+}
+
+.share li:hover {
+  opacity: 0.8;
+}
+
+.share .share-tw {
+  background-color: #55acee;
+}
+
+.share .share-fb {
+  background-color: #3b5998;
+}
+
+.share .share-gp {
+  background-color: #dd4b39;
+}
+
 .sidemenu {
   margin-bottom: 30px;
 }
@@ -157,6 +203,7 @@ body {
 
 .osusume {
   margin-bottom: 30px;
+  /*おすすめ記事のメニューのコンテキストを重ねる設定*/
 }
 
 .osusume h1 {
@@ -175,7 +222,8 @@ body {
 
 .osusume li a {
   display: block;
-  padding: 5px;
+  padding: 0;
+  margin-bottom: 10px;
   color: #000000;
   font-size: 14px;
   text-decoration: none;
@@ -183,6 +231,34 @@ body {
 
 .osusume li:hover {
   background-color: #eeeeee;
+  opacity: 0.8;
+}
+
+.osusume .text {
+  padding: 5px 10px;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #ffffff;
+}
+
+.osusume img {
+  width: 100%;
+  height: auto;
+  border: none;
+  vertical-align: bottom;
+}
+
+.osusume a {
+  position: relative;
+}
+
+.osusume .text {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .ninki h1 {
@@ -201,14 +277,44 @@ body {
 
 .ninki li a {
   display: block;
+  height: 60px;
   padding: 5px;
-  color: #000000;
+  border-bottom: dotted 1px #dddddd;
+  color: #2288bb;
   font-size: 14px;
   text-decoration: none;
 }
 
+.ninki li a img {
+  border: none;
+}
+
 .ninki li:hover {
   background-color: #eeeeee;
+}
+
+.ninki li:after {
+  content: "";
+  display: block;
+  clear: both;
+}
+
+.ninki img {
+  float: left;
+  width: 60px;
+}
+
+.ninki .text {
+  float: none;
+  width: auto;
+  margin-left: 60px;
+  padding-left: 15px;
+}
+
+.ninki span {
+  display: block;
+  color: #666666;
+  font-size: 12px;
 }
 
 .copyright p {
