--- a/static/sheet4.scss
+++ b/static/sheet4.scss
@@ -128,6 +128,45 @@ body {
         height: auto;
     }
 }
+.share {
+    margin-top: 40px;
+    
+    ul {
+        margin: 0;
+        padding: 0;
+        list-style: none;
+        &:after {
+            content: "";
+            display: block;
+            clear: both;
+        }
+    }
+    li {
+        float: left;
+        width: 33.33%;
+
+        a {
+            display: block;
+            padding: 10px 5px;
+            color: #ffffff;
+            font-size: 14px;
+            text-align: center;
+            text-decoration: none;
+        }
+        &:hover {
+            opacity: 0.8;
+        }
+    }
+    .share-tw {
+        background-color: #55acee;
+    }
+    .share-fb {
+        background-color: #3b5998;
+    }
+    .share-gp {
+        background-color: #dd4b39;
+    }
+}
 .sidemenu {
     margin-bottom: 30px;
 
@@ -182,14 +221,40 @@ body {
     li {
         a {
             display: block;
-            padding: 5px;
+            padding: 0;
+            margin-bottom: 10px;
             color: #000000;
             font-size: 14px;
             text-decoration: none;
         }
         &:hover {
             background-color: #eeeeee;
+            opacity: 0.8;
         }
+    }
+    .text {
+        padding: 5px 10px;
+        background-color: rgba(0,0,0,0.5);
+        color: #ffffff;
+    }
+    img {
+        width: 100%;
+        height: auto;
+        border: none;
+        vertical-align: bottom;
+    }
+    /*おすすめ記事のメニューのコンテキストを重ねる設定*/
+    a {
+        position: relative;
+    }
+    .text {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        -moz-box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+        box-sizing: border-box;
     }
 }
 
@@ -211,14 +276,40 @@ body {
     li {
         a {
             display: block;
+            height: 60px;
             padding: 5px;
-            color: #000000;
+            border-bottom: dotted 1px #dddddd;
+            color: #2288bb;
             font-size: 14px;
             text-decoration: none;
+            img {
+                border: none;
+            }
         }
         &:hover {
             background-color: #eeeeee;
         }
+        &:after {
+            content: "";
+            display: block;
+            clear: both;
+
+        }
+    }
+    img {
+        float: left;
+        width: 60px;
+    }
+    .text {
+        float: none;
+        width: auto;
+        margin-left: 60px;
+        padding-left: 15px;
+    }
+    span {
+        display: block;
+        color: #666666;
+        font-size: 12px;
     }
 }
 
